--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             <div class="threeD__frame frame frame-bg home">
                 <div class="frame__content">
-                    <div class="frame__media" style="background: url(img/homeImg.jpg) no-repeat; background-size: cover;background-position: center;"></div>
+                    <div class="frame__media" style="background: url(img/homeImg.webp) no-repeat; background-size: cover;background-position: center;"></div>
                 </div>
             </div>
 
@@ -73,7 +73,7 @@
             </div>
             <div class="threeD__frame frame frame-bg home">
                 <div class="frame__content">
-                    <div class="frame__media frame__media-left" style="background: url(img/homeImg.jpg) center no-repeat"></div>
+                    <div class="frame__media frame__media-left" style="background: url(img/homeImg.webp) center no-repeat"></div>
                 </div>
             </div>
 
@@ -86,7 +86,7 @@
             </div>
             <div class="threeD__frame frame frame-bg info">
                 <div class="frame__content">
-                    <div class="frame__media frame__media-right" style="background: url(img/skills.jpg) no-repeat;background-size: contain;background-position: center;"></div>
+                    <div class="frame__media frame__media-right" style="background: url(img/skills.webp) no-repeat;background-size: contain;background-position: center;"></div>
                 </div>
             </div>
 
@@ -99,7 +99,7 @@
             </div>
             <div class="threeD__frame frame frame-bg info">
                 <div class="frame__content">
-                    <div class="frame__media frame__media-left" style="background: url(img/we.jpg) center no-repeat;background-size: contain;background-position: center;"></div>
+                    <div class="frame__media frame__media-left" style="background: url(img/we.webp) center no-repeat;background-size: contain;background-position: center;"></div>
                 </div>
             </div>
 
@@ -112,7 +112,7 @@
             </div>
             <div class="threeD__frame frame frame-bg portfolio">
                 <div class="frame__content">
-                    <div class="frame__media frame__media-right" style="background: url(img/portfolio/project1.png) no-repeat;background-size: contain;background-position: center;"></div>
+                    <div class="frame__media frame__media-right" style="background: url(img/portfolio/project1.webp) no-repeat;background-size: contain;background-position: center;"></div>
                 </div>
             </div>
 
@@ -125,7 +125,7 @@
             </div>
             <div class="threeD__frame frame frame-bg portfolio">
                 <div class="frame__content">
-                    <div class="frame__media frame__media-left" style="background: url(img/portfolio/project2.png) no-repeat;background-size: contain;background-position: center;"></div>
+                    <div class="frame__media frame__media-left" style="background: url(img/portfolio/project2.webp) no-repeat;background-size: contain;background-position: center;"></div>
                 </div>
             </div>
 
@@ -138,7 +138,7 @@
             </div>
             <div class="threeD__frame frame frame-bg portfolio">
                 <div class="frame__content">
-                    <div class="frame__media frame__media-right" style="background: url(img/portfolio/project3.png) no-repeat;background-size: contain;background-position: center;"></div>
+                    <div class="frame__media frame__media-right" style="background: url(img/portfolio/project3.webp) no-repeat;background-size: contain;background-position: center;"></div>
                 </div>
             </div>
 
@@ -151,7 +151,7 @@
             </div>
             <div class="threeD__frame frame frame-bg portfolio">
                 <div class="frame__content">
-                    <div class="frame__media frame__media-left" style="background: url(img/portfolio/project4.png) no-repeat;background-size: contain;background-position: center;"></div>
+                    <div class="frame__media frame__media-left" style="background: url(img/portfolio/project4.webp) no-repeat;background-size: contain;background-position: center;"></div>
                 </div>
             </div>
         </section>
