--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </a>
         </div>
         <ion-icon name="volume-high-outline" class="sound muted"></ion-icon>
-        <audio src="../sounds/ambient.mp3" class="ambient" loop>
+        <audio src="../sounds/ambient.ogg" class="ambient" loop>
             Your Browser Not Support tag Audio
         </audio>
     </div>
