--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
 </header>
     <main>
-    <audio src="sounds/ambient.mp3" class="ambient" loop>
+    <audio src="sounds/ambient.ogg" class="ambient" loop>
         Your Browser Not Support tag Audio
     </audio>
     <div class="wrapper">
